# amazon-hidden-site-hunter

./: .gitignore  README.md  bbox_selector.py  chatgpt_parser.py  combine_bbox_images.py  cop_dem_tools.py  data_vis.py  detect_hidden_sites.py  folium_bbox_tiles.py  pipeline.py  pipeline_config.yaml  plot_all_bboxes.py  preview_bbox_json.py  preview_bbox_multi.py  preview_pipeline.py  pyproject.toml  sentinel_utils.py  tribes.py  vast_populate.sh
data_vis/amazon-geoglyphs-sites/: amazon_geoglyphs_sites.csv
data_vis/lomas-sites/: lomas_sites.csv
data_vis/mound-villages-acre/: mound_villages_acre.csv
data_vis/my-sites/: my_sites.csv
tests/: test_chatgpt_parsing.py  test_combined_map.py  test_cop_dem_tools.py  test_detect_anomalies.py  test_folium_bbox_tiles.py  test_pipeline_csv_outputs.py  test_pipeline_multi.py  test_pipeline_residual_step.py  test_preview_bbox_json.py  test_preview_pipeline.py  test_residual_relief.py  test_sentinel_utils.py
