[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-hidden-site-hunter"
version = "0.1.1"
description = "Open-source CLI to flag canopy-hidden anthropogenic earthworks in the Amazon using TanDEM-X and GEDI data"
authors = [ { name = "Denis Cera" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Runtime dependencies — all wheels available for uv / pip
dependencies = [
    "rasterio>=1.3",
    "fsspec>=2023.10",
    "s3fs>=2023.10",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "geopandas>=0.14",
    "rich>=13.0",
    "scikit-image>=0.22",
    "requests>=2.31",
    "earthaccess",
    "h5py",
    "humanize",
    "folium",
    "matplotlib",
    "geopandas",
    "contextily",
    "pykrige>=1.7.2",
]

[project.scripts]
# exposes a cross‑platform entry point
"detect-hidden-sites" = "detect_hidden_sites:main"

[tool.setuptools]
py-modules = ["detect_hidden_sites"]

[project.urls]
Homepage = "https://github.com/Dene33/amazon-hidden-site-hunter"
Source = "https://github.com/Dene33/amazon-hidden-site-hunter"
